--- a/templates/map.html
+++ b/templates/map.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSV64ZCgor0svEcTWYEFolCG9UKzZ5MQc"></script>
+    <script src="https://cdn.jsdelivr.net/npm/socket.io-client@4.5.3/dist/socket.io.js"></script>
     <title>Map</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
     <style>
@@ -11,6 +13,8 @@
         }
 
         #map {
+            width: 100%;
+            height: 100%;
             position: absolute;
             top: 0;
             bottom: 0;
@@ -25,18 +29,52 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
     <script>
-        var latitude = parseFloat('{{ latitude }}');
-        var longitude = parseFloat('{{ longitude }}');
+        // Declare map and marker as global variables
+        let map;
+        let marker;
 
-        var map = L.map('map').setView([latitude, longitude], 15);
+        // Initialize the map
+        function initMap() {
+            // Retrieve latitude and longitude from the template
+            const latitude = parseFloat('{{ latitude }}');
+            const longitude = parseFloat('{{ longitude }}');
+            const zoom = 14;  // Set the desired zoom level
 
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-        }).addTo(map);
+            console.log(latitude, longitude);
 
-        L.marker([latitude, longitude]).addTo(map)
-            .bindPopup('Selected Location')
-            .openPopup();
+            // Create a map centered at the specified latitude and longitude
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: latitude, lng: longitude },
+                zoom: zoom
+            });
+
+            // Add a marker at the specified location
+            marker = new google.maps.Marker({
+                position: { lat: latitude, lng: longitude },
+                map: map,
+                title: 'Marker'
+            });
+
+        }
+
+        // Update the map based on latitude and longitude
+        function updateMap(latitude, longitude) {
+            const newPosition = new google.maps.LatLng(latitude, longitude);
+
+            // Update the marker position
+            marker.setPosition(newPosition);
+
+            // Center the map to the new position
+            map.setCenter(newPosition);
+
+            // Zoom to the new position
+            map.setZoom(14);
+
+            console.log(latitude, longitude);
+        }
+
+        // Call initMap() to initialize the map
+        initMap();
     </script>
 </body>
 </html>
